--- a/app/templates/request_detail.html
+++ b/app/templates/request_detail.html
@@ -104,7 +104,7 @@
                 <th width="30%">National</th>
                 <td width="20%">{{req.national_percent}} %</td>
                 <th width="20%">Node</th>
-                <td width="30%">{{req.allocation_node}}</td>
+                <td width="30%">{{req.allocation_home}}</td>
             </tr>
             </tbody>
         </table>
