--- a/app/templates/approve_request_form.html
+++ b/app/templates/approve_request_form.html
@@ -163,7 +163,10 @@
                                         <td>{{vm.alloc.requests[0].compute_requests[0].core_hours}}</td>
                                         <td>
                                             <div class="form-group"
-                                                 ng-class="{'has-error': (vm.approved_core_hours_invalid || vm.zero_core_hour_invalid || vm.non_zero_core_hours_invalid || (vm.approve_form.approved_core_hours.$dirty && vm.approve_form.approved_core_hours.$invalid)), 'has-warning': vm.below_recommend_core_hours_warn}">
+                                                 ng-class="{'has-error': (vm.approved_core_hours_invalid
+                                                 || vm.zero_core_hour_invalid
+                                                 || vm.non_zero_core_hours_invalid
+                                                 || (vm.approve_form.approved_core_hours.$dirty && vm.approve_form.approved_core_hours.$invalid))}">
                                                 <input type="number" class="form-control" id="approved_core_hours"
                                                        name="approved_core_hours"
                                                        ng-model="vm.alloc.requests[0].compute_requests[0].approved_core_hours"
@@ -177,9 +180,6 @@
                                                 </span>
                                                 <span class="help-block" ng-show="vm.non_zero_core_hours_invalid">
                                                      Invalid, must be zero core hour
-                                                </span>
-                                                <span class="help-block" ng-show="vm.below_recommend_core_hours_warn">
-                                                    The recommended core hours is {{vm.estimated_core_hours}} or above
                                                 </span>
                                             </div>
                                         </td>
